# DeskChan

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/demo_video/: concat.txt  concat_en_hero_bilingual_rest.txt  concat_hackathon_hero.txt  concat_hackathon_hero_credits.txt  concat_hackathon_hero_credits_subtitles.txt  concat_hackathon_hero_credits_subtitles_bilingual.txt  concat_hackathon_hero_credits_subtitles_en_timed.txt  concat_hackathon_hero_credits_subtitles_timed.txt  make_bilingual_text_cards.swift  make_credit_card.swift  make_hero_card.swift  make_hero_card_en.swift  make_subtitle_overlays.swift  make_subtitle_overlays_bilingual.swift  make_subtitle_overlays_en.swift  make_text_cards.swift
data/: desk_demo_states.json  desk_voice_lines.json  hotcake_voice_lines.json  tetris_voice_lines.json  voice_lines.json
docs/: discord.md  stackchan_desk_commentator.md  stackchan_tetris_commentator.md
firmware/stackchan_http_bridge/: README.md  platformio.ini
firmware/stackchan_http_bridge/include/: wifi_config.example.h
firmware/stackchan_http_bridge/src/: main.cpp
public/tron/: app.js  index.html  styles.css
public/vision/: app.js  index.html  styles.css
src/deskchan/: __init__.py  bridge.py  cli.py  prompts.py  providers.py  schemas.py  stackchan.py  tts.py
src/kitchen_chan/: __init__.py  bridge.py  cli.py  prompts.py  providers.py  schemas.py  stackchan.py  tts.py
