[project]
name = "kitchen-chan"
version = "0.1.0"
description = "StackChan desk commentary prototype for the Gemma 4 Hackathon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-genai>=1.0.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
kitchen-chan = "kitchen_chan.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
